[gd_scene load_steps=22 format=3 uid="uid://d3j586poo6ba6"]

[ext_resource type="Script" uid="uid://btcq8a4nyv48y" path="res://scripts/game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://bve4to1ebobje" path="res://card.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://dwb3h78qgftnt" path="res://board.tscn" id="3_feb5d"]
[ext_resource type="PackedScene" uid="uid://8stvm8j2j0at" path="res://deck.tscn" id="4_fc0e3"]
[ext_resource type="PackedScene" uid="uid://b3pt0xsaj0d38" path="res://Hand.tscn" id="5_7jktm"]
[ext_resource type="PackedScene" uid="uid://bdiadu82f7cwg" path="res://battle_field.tscn" id="6_vef74"]
[ext_resource type="PackedScene" uid="uid://bydqqfvrdrldu" path="res://graveyard.tscn" id="7_mfdv2"]
[ext_resource type="Script" uid="uid://gexxd2cdhlpo" path="res://focus_card.gd" id="9_iotsf"]
[ext_resource type="Script" uid="uid://eur8blk8gur4" path="res://stack.gd" id="9_vef74"]
[ext_resource type="Script" uid="uid://b8jjysxi0lj74" path="res://assistant.gd" id="10_hve3p"]
[ext_resource type="PackedScene" uid="uid://b1c3wp5s154jm" path="res://BigButton.tscn" id="11_mfdv2"]
[ext_resource type="PackedScene" uid="uid://bapc4rokyh1tr" path="res://opponent_hand.tscn" id="12_iotsf"]
[ext_resource type="PackedScene" uid="uid://dmhmh6wr3wejy" path="res://card_button.tscn" id="13_lc2xo"]
[ext_resource type="Script" uid="uid://dwqd8m1p4ncex" path="res://graveyards.gd" id="14_7sc4i"]
[ext_resource type="PackedScene" uid="uid://bh8f5mddl0cbx" path="res://damage_zone.tscn" id="14_215e1"]
[ext_resource type="PackedScene" uid="uid://ja4kal3yojgu" path="res://ballistic_arrow.tscn" id="16_80cx4"]
[ext_resource type="Script" uid="uid://bgrk6xywpccf4" path="res://player_1.gd" id="17_e8heu"]
[ext_resource type="Script" uid="uid://bi14trwj06mqq" path="res://console.gd" id="18_rvswv"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_j5wjh"]

[sub_resource type="Sky" id="Sky_vef74"]
sky_material = SubResource("PanoramaSkyMaterial_j5wjh")

[sub_resource type="Environment" id="Environment_j5wjh"]
background_mode = 2
sky = SubResource("Sky_vef74")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.0
reflected_light_source = 2
ssr_fade_in = 0.0274516
ssr_fade_out = 168.897

[node name="Game" type="Node3D"]
script = ExtResource("1_80nbo")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j5wjh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -8.60946e-08, 1.51808e-08, 0, 0.173648, 0.984808, -8.74228e-08, 0.984808, -0.173648, 0, 4.49179, -1.2059)
fov = 60.0
size = 0.650597

[node name="Camera3D2" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, 4.492, 1.2)
fov = 60.0
size = 0.650597

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.000506119, 1, 0, -1, 0.000506119, 0, 0, 0)
light_cull_mask = 4294966276
sky_mode = 1
metadata/_edit_lock_ = true

[node name="Board" parent="." instance=ExtResource("3_feb5d")]
metadata/_edit_lock_ = true

[node name="Deck" parent="." instance=ExtResource("4_fc0e3")]
transform = Transform3D(1.4, -2.11394e-07, 2.11394e-07, -2.11394e-07, -1.4, -7.11508e-21, 2.11394e-07, -3.19196e-14, -1.4, 3.33584, 0.434855, -1.99823)

[node name="Hand" parent="." instance=ExtResource("5_7jktm")]
transform = Transform3D(-1, 2.62201e-08, 1.48702e-07, 0, 0.984808, -0.173648, -1.50996e-07, -0.173648, -0.984808, 0, 2.221, -1.95)

[node name="Card" parent="Hand" instance=ExtResource("2_e2o6t")]
visible = false

[node name="Card6" parent="." instance=ExtResource("2_e2o6t")]
transform = Transform3D(1, 0, 0, 0, 0.809017, 0.587785, 0, -0.587785, 0.809017, 0, 1.7, -3.31222)
visible = false
id = 66

[node name="Field" parent="." instance=ExtResource("6_vef74")]

[node name="FocusCard" parent="." instance=ExtResource("2_e2o6t")]
transform = Transform3D(-1, -1.51808e-08, -8.60946e-08, 0, 0.984808, -0.173648, 8.74228e-08, -0.173648, -0.984808, 0.531927, 3.7517, -0.941219)
visible = false
script = ExtResource("9_iotsf")

[node name="Stack" type="Node3D" parent="."]
transform = Transform3D(-1, 1.51808e-08, 8.60946e-08, 0, 0.984808, -0.173648, -8.74228e-08, -0.173648, -0.984808, -1.4, 2.7, -0.5)
script = ExtResource("9_vef74")

[node name="CardStack" parent="Stack" instance=ExtResource("2_e2o6t")]
transform = Transform3D(-1.4, 3.67082e-08, 2.08183e-07, 0, 1.37873, -0.243107, -2.11394e-07, -0.243107, -1.37873, 0, 0, 0)
visible = false
id = 66

[node name="Assistant" type="Node3D" parent="."]
script = ExtResource("10_hve3p")

[node name="BigButton" parent="Assistant" instance=ExtResource("11_mfdv2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05475, 0.327426, -1.98666)
visible = false

[node name="Assistant2" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -3.49601e-05, 0, 1, 0, 3.49601e-05, 0, -1, 0, 0, 0)
script = ExtResource("10_hve3p")

[node name="BigButton" parent="Assistant2" instance=ExtResource("11_mfdv2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05475, 0.327426, -1.98666)
visible = false

[node name="OpponentDeck" parent="." instance=ExtResource("4_fc0e3")]
transform = Transform3D(1.4, -2.11394e-07, 2.11394e-07, -2.11394e-07, -1.4, -7.11508e-21, 2.11394e-07, -3.19196e-14, -1.4, -3.58304, 0.3, 1.71566)

[node name="OpponentHand" parent="." instance=ExtResource("12_iotsf")]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 2.211, 0.675683)

[node name="CardButton" parent="." instance=ExtResource("13_lc2xo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.922038, 0)
visible = false

[node name="DamageZone" parent="." instance=ExtResource("14_215e1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56502, 0, -0.521555)

[node name="OpponentDamageZone" parent="." instance=ExtResource("14_215e1")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.597, 0.1, 0.579)

[node name="Graveyards" type="Node3D" parent="."]
script = ExtResource("14_7sc4i")

[node name="Graveyard" parent="Graveyards" instance=ExtResource("7_mfdv2")]
transform = Transform3D(-1.2, 0, -1.81195e-07, 0, 1.2, 0, 1.81195e-07, 0, -1.2, -3.5, 0.25, -1.4)

[node name="OpponentGraveyard" parent="Graveyards" instance=ExtResource("7_mfdv2")]
transform = Transform3D(-1.2, 0, -1.04907e-07, 0, 1.2, 0, 1.04907e-07, 0, -1.2, 3.5, 0.25, 1.4)

[node name="BallisticArrow" parent="." instance=ExtResource("16_80cx4")]

[node name="Player1" type="Node3D" parent="."]
script = ExtResource("17_e8heu")

[node name="Console" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("18_rvswv")

[node name="TextEdit" type="TextEdit" parent="Console"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="RichTextLabel" type="RichTextLabel" parent="Console"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Console"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Opponent" type="Node3D" parent="."]

[connection signal="charge_start" from="Hand" to="Stack" method="_on_hand_charge_start"]
[connection signal="charge_complete" from="Assistant" to="Hand" method="_on_assistant_charge_complete"]
[connection signal="charge_complete" from="Assistant" to="Stack" method="_on_assistant_charge_complete"]
[connection signal="process_next_instruction" from="Assistant" to="." method="_on_assistant_process_next_instruction"]
[connection signal="charge_complete" from="Assistant2" to="Hand" method="_on_assistant_charge_complete"]
[connection signal="charge_complete" from="Assistant2" to="Stack" method="_on_assistant_charge_complete"]
[connection signal="process_next_instruction" from="Assistant2" to="." method="_on_assistant_process_next_instruction"]
